--- a/app/src/main/res/layout/activity_movies_recommendations.xml
+++ b/app/src/main/res/layout/activity_movies_recommendations.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/movies_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/black"
